src/style/SideBar.css
/* ... */
.LEFTSB__icon-container{
    color: var(--text-dark);
    background-color: var(--bg-very-light);
    position: absolute;
    padding: 2px;    
    display: flex;
    align-items: center;
    justify-content: center;
    right: 8px;
    top: 8px;
    border-radius: 4px;
    cursor: pointer;
}

.LEFTSB__icon{
    width: 1.25em;
    height: 1.25em;
    margin: 1px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    
    
}
.LEFTSB__flow-container{
    position: relative;
}
.LEFTSB__flow-item-container{
    display: flex;
    gap: 2px;
    align-items: center;
}

.LEFTSB__flow-label{
    margin: 2px;
    font-weight: bold;
    /* font-size: 14px; */
    font-size: 0.9em;
    flex-shrink: 0;
    padding-top: 2px;
    padding-bottom: 2px;
    

}
.LEFTSB__flow-main-label{
    /* font-size: 16px; */
    font-size: 1em;
    margin: 6px;
    font-weight: bold;
    margin-left: 10px;    

}

.LEFTSB__flow-data{
    margin: 2px;
    padding-left: 4px;
    text-transform: capitalize;
    /* font-size: 14px; */
    font-size: 0.9em;

    width: fit-content;

}

.RIGHTSB__inner-container {
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 10px;
}

.RIGHTSB__legend {
    /* height: 600px; */
    height: 37em;

}

.RIGHTSB__legend-flow-container{
    display: flex;
    align-items: center;
    justify-content: start;
}

.RIGHTSB__legend-flowRiver-container{
    display: flex;
    align-items: center;
    justify-content: start;
    width: 50%;
    gap: 6px
}
.RIGHTSB__legend-florRivers-container{
    display: flex;
    flex-wrap: wrap;
    overflow-y: auto;    
    scroll-behavior: auto;
    /* max-height: calc(100% - 110px); */
      
}


.RIGHTSB__legend-flow-name{
    /* font-size: 12px; */
    font-size: 0.75em;

    margin: 8px;
    margin: 6px;
}

.RIGHTSB__legend-flow-img{
    height: 4px;
    width: 2em;
    flex-shrink: 0;
}


.LEFTSB__data{
    /* font-size: 14px; */
    font-size: 0.9em;

    padding-left: 10px;
    margin: 6px;
    word-break: normal;
    min-height: 18px;
    font-family: inherit;
    padding: 0;   
    height: fit-content;
}

.MuiInputBase-root{
    padding: 0 !important;

}

.LEFTSB__data:disabled{
    /* font-size: 14px; */
    font-size: 0.9em;

    padding-left: 10px;
    word-break: normal;
    min-height: 18px;
    background-color: inherit;
    border: 0;
    color: rgb(184, 184, 196);;  
    padding: 0;  
    border: 0px;
 }




.LEFTSB__data-label{
    /* font-size: 14px; */
    font-size: 0.9em;
    font-weight: bold;
    margin-top: 2px;
    margin-bottom: 2px;

}
.LEFTSB__data-container{
    display: flex;
    flex-direction: column;
    min-width: 65px;

}

.LEFTSB__data-link{
    color: var(--text-light);
    word-break: break-all;
    text-transform: none;


}

.LEFTSB__option-container{
    display: flex;
    padding: 4px;
}
.LEFTSB__option-checkbox{
    width: 1em;
    height: 1em;
    margin: 4px;
}
.LEFTSB__flow-checkbox, .LEFTSB__sphere-checkbox{
    height: 1.25em;
    width: 1.25em;
    align-self: baseline;
    
}
.LEFTSB__option-checkbox:checked, .LEFTSB__flow-checkbox, .LEFTSB__sphere-checkbox{
    
    accent-color: var(--text-dark);
}
.LEFTSB__option-slider{
    max-width: 7em;
    margin-left: 15px;
}

.LEFTSB__new-sphere-container{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin: 8px;
}

.LEFTSB__new-main-label{
    font-size: 16px;
    font-size: 1em;
    margin: 6px;
    font-weight: bold;
    margin-left: 10px;    

}

.LEFTSB__new-travel-data-label{
    font-size: 0.9em;
    font-weight: bold;
    margin-top: 2px;
    margin-bottom: 2px; 
    writing-mode: vertical-lr;  

}

.LEFTSB__new-flow-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.LEFTSB__new-flow-inner-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 90%;
}

.LEFTSB__new-flow-travel-container{
    display: flex;
    justify-content: center;
    gap: 6px;
}
.LEFTSB__new-flow-type-container{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
    text-align: center;
}
.LEFTSB__new-flow-type-autocomplete{
    width: 100%;
}

.LEFTSB__new-flow-type-color-select{
    width: 2em;
    height: 2em;
    padding: 0px;
    flex-shrink: 0;
}

.LEFTSB__new-button-container{
    display: flex;
    justify-content: center;
    margin-top: 10px;
}

.LEFTSB__new-dropdown{
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--bg);
    border-radius: 10px;
    margin-bottom: 10px;


}

.LEFTSB__new-dropdown-arrow{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 4px;
}
.LEFTSB__new-sphere-radius-container{
    display: flex;
   

}
.LEFTSB__new-sphere-inner-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 90%;
    margin-bottom: 10px;
}
.LEFTSB__sphere-radius-container{
    display: flex;
    align-items: center;
   

}

.LEFTSB__data-radius{
    min-width: 2.5em;
    text-align: right;
}

.LEFTSB__slider{
    padding-top: 0px;
}

.LEFTSB__option-button-container{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 8px;
    
}

.LEFTSB__option-button{
    width: 100%;
}

.LEFTSB__planet-shape-container{
    display: flex;
    align-items: center;
}


.LEFTSB__planet-size-container{
    display: flex;
    align-items: center;
    gap: 10px;

}

.RIGHTSB__planet-card{
    background-color: var(--bg-very-light);
    color: var(--text-dark);
    display: flex;
    margin: 10px;
    border-radius: 15px;  
    align-items: center;
    justify-content:space-around;
    border: 2px solid var(--bg);
    gap: 10px;
    cursor: pointer;

}
/* ... */

